--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,10 +62,12 @@
      <Compile Include="Assets\Scripts\ChaseCamera.cs" />
      <Compile Include="Assets\Scripts\CoinManager.cs" />
      <Compile Include="Assets\Scripts\CoinPickup.cs" />
+     <Compile Include="Assets\Scripts\GameController.cs" />
      <Compile Include="Assets\Scripts\PlayerMovement.cs" />
      <Compile Include="Assets\Scripts\RentepuntManager.cs" />
      <Compile Include="Assets\Scripts\RentepuntPickup.cs" />
      <Compile Include="Assets\Scripts\Singleton.cs" />
+     <Compile Include="Assets\Scripts\TimeManager.cs" />
      <None Include="Assets\RentepuntShader.shader" />
      <None Include="Assets\Resources\Shaders\VertexColorUnlit.shader" />
  <Reference Include="UnityEngine.Networking">
